--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "form-data": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
     "prompt-sync": "^4.2.0",
     "puppeteer": "^19.11.1",
     "puppeteer-extra": "^3.3.6",
