--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Arthur",
   "license": "ISC",
   "dependencies": {
+    "@vercel/blob": "^0.25.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
