--- a/.github/workflows/run-on-schedule.yml
+++ b/.github/workflows/run-on-schedule.yml
@@ -5,7 +5,7 @@ name: Run Node.js script on a schedule
 on:
     push:
     schedule:
-        - cron: "0 7 * * *"
+        - cron: "0 7-8 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,7 +18,7 @@ jobs:
                   node-version: "20.x"
             - run: npm install
             - name: Run script
-              run: npm bot
+              run: npm run bot
               env:
                   TEST_COOKIES: ${{ secrets.TEST_COOKIES }}
                   TEST_APIKEY: ${{ secrets.TEST_APIKEY }}
