--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/blob": "^0.25.1",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -29,6 +30,7 @@
     "puppeteer": "^19.11.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "random-words": "^2.0.1"
+    "random-words": "^2.0.1",
+    "uuid": "^11.0.2"
   }
 }
