--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@vercel/blob": "^0.25.1",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^4.0.0",
     "prompt-sync": "^4.2.0",
     "puppeteer": "^19.11.1",
     "puppeteer-extra": "^3.3.6",
