--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
+    "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
