--- a/.github/workflows/run-on-schedule.yml
+++ b/.github/workflows/run-on-schedule.yml
@@ -20,5 +20,11 @@ jobs:
             - name: Run script
               run: npm run bot
               env:
-                  TEST_COOKIES: ${{ secrets.TEST_COOKIES }}
-                  TEST_APIKEY: ${{ secrets.TEST_APIKEY }}
+                  POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+                  verceldb: ${{ secrets.verceldb }}
+                  POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+                  POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+                  POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL }}
+                  POSTGRES_URL_NO_SSL: ${{ secrets.POSTGRES_URL_NO_SSL }}
+                  POSTGRES_URL_NON_POOLING: ${{ secrets.POSTGRES_URL_NON_POOLING }}
+                  POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
