--- a/.github/workflows/run-on-schedule.yml
+++ b/.github/workflows/run-on-schedule.yml
@@ -5,7 +5,7 @@ name: Run Node.js script on a schedule
 on:
     # push:
     schedule:
-        - cron: "0 7-8 * * *"
+        - cron: "0 7 * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
