--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "random-words": "^2.0.1",
     "uuid": "^11.0.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.15"
   }
 }
