--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node bot/test.js",
     "build": "npm install",
     "bot": "node bot/bot.js",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "build-css": "npx tailwindcss -i ./server/template.css -o ./public/output.css --minify"
   },
   "keywords": [
     "bot",
