--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot/bot.js",
   "scripts": {
     "test": "node bot/test.js",
-    "build": "npm install",
+    "build": "npm install && npm run build-css",
     "bot": "node bot/bot.js",
     "start": "node server/index.js",
     "build-css": "npx tailwindcss -i ./server/template.css -o ./public/output.css --minify"
