--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,5 @@
             "dest": "server/index.js"
         }
     ],
-    "buildCommand": "npm run build-css && npm install"
+    "buildCommand": "npm run build-css"
 }
